# Roguelike-Exile

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/: enemy_stats.json
include/: enemy.h  map.h  object.h
include/enemies/: enemy.h  enemyManager.h  fastEnemy.h  meleeEnemy.h  tank.h
include/objects/: object.h  objectManager.h
include/player/: attack.h  movement.h  player.h
include/utils/: collision.h  drawingUI.h  gameState.h  inputControl.h
src/: enemy.cpp  roguelike_exile.cpp
src/enemies/: enemy.cpp  enemyManager.cpp  fastEnemy.cpp  meleeEnemy.cpp  tank.cpp
src/objects/: objectManager.cpp
src/player/: attack.cpp  movement.cpp  player.cpp
src/utils/: collision.cpp  drawingUI.cpp  gameState.cpp  inputControl.cpp
